--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,38 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 2.8.1)
 project(SourceAnalyzer)
 
-# common includes
-set(COMMON_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-file (GLOB COMMON_HEADERS "${COMMON_INCLUDE}/*.h")
-set(LOCAL_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/src/include)
-file (GLOB LOCAL_HEADERS "${LOCAL_INCLUDE}/*.h")
-                   
-include_directories(${SourceAnalyzer_SOURCE_DIR}/include
-		    ${SourceAnalyzer_SOURCE_DIR}/src
-		    ${CMAKE_CURRENT_SOURCE_DIR}/src/include
-		    /usr/local/BerkeleyDB.5.1/include)
-link_directories(/usr/local/BerkeleyDB.5.1/lib)
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SRC)
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/tests/api  SRC_API_TEST)
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/tests/link SRC_LINK_TEST)
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/tests/view SRC_VIEW_TEST)
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/tests/cpar SRC_CPAR_TEST)
+set( SOURCE_ANALYZER_ROOT_DIR ${SourceAnalyzer_SOURCE_DIR} )
+set( SOURCE_ANALYZER_BUILD_DIR ${SourceAnalyzer_BINARY_DIR} )
 
-add_library(sa3 ${SRC} ${COMMON_HEADERS} ${LOCAL_HEADERS})
-add_executable(apitest ${SRC_API_TEST})
-add_executable(link ${SRC_LINK_TEST})
-add_executable(view ${SRC_VIEW_TEST})
-add_executable(cpar ${SRC_CPAR_TEST})
-target_link_libraries(apitest db)
-target_link_libraries(link db)
-target_link_libraries(view db)
-target_link_libraries(cpar db)
+set( APPS
+	${SOURCE_ANALYZER_ROOT_DIR}/apps/qsagui
+)
+
+set( LIBS
+	${SOURCE_ANALYZER_ROOT_DIR}/libs/common/sav3
+)
+
+set( EXAMPLES
+)
+
+set( TESTS
+)
+
+set( ALL_COMPONENTS 
+	${APPS}
+	${LIBS}
+	${EXAMPLES}
+	${TESTS}
+)
+
+foreach( component ${ALL_COMPONENTS} )
+	set( cmakelists ${component}/CMakeLists.txt )
+	if( EXISTS ${cmakelists} )
+		message( STATUS "Adding component: ${component}" )
+		include( ${cmakelists} )
+	else( EXISTS ${cmakelists} )
+		message( STATUS "Error: Can't find ${cmakelists}" )
+	endif( EXISTS ${cmakelists} )
+endforeach(component ${ALL_COMPONENTS} )
+
 
