Added building of cparser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set( SOURCE_ANALYZER_BUILD_DIR ${SourceAnalyzer_BINARY_DIR} )
 
 set( APPS
 	qsagui
+	cpar
 )
 addPrefix( "${SOURCE_ANALYZER_ROOT_DIR}/apps/" APPS )
 
