--- a/apps/cpar/CMakeLists.txt
+++ b/apps/cpar/CMakeLists.txt
@@ -28,12 +28,12 @@ cmake_minimum_required( VERSION 2.8.1 )
 
 if( SOURCE_ANALYZER_ROOT_DIR )
 	message( STATUS "Building as part of SA. Root dir: ${SOURCE_ANALYZER_ROOT_DIR}" )
-	set( COMPONENT_NAME CPARSER_AST )
+	set( COMPONENT_NAME CPARSER )
 	set( COMPONENT_ROOT ${SOURCE_ANALYZER_ROOT_DIR}/apps/cpar )
 endif( SOURCE_ANALYZER_ROOT_DIR )
 
 if( NOT COMPONENT_NAME )
-	set( COMPONENT_NAME CPARSER_AST )
+	set( COMPONENT_NAME CPARSER )
 	project( ${COMPONENT_NAME} )
 	set( COMPONENT_ROOT ${${COMPONENT_NAME}_SOURCE_DIR} )
 	message( STATUS "Independent build - Setting COMPONENT_NAME to ${COMPONENT_NAME}" )
