--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 build/*
 apps/cpar/build/*
 apps/link/build/*
+apps/view/build/*
 apps/qsagui/build/*
 libs/common/ast/build/*
 libs/common/sav3/build/*
