Added building of test for sav3 API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,9 @@ set( EXAMPLES
 )
 
 set( TESTS
+	sav3api
 )
+addPrefix( "${SOURCE_ANALYZER_ROOT_DIR}/tests/" TESTS )
 
 set( ALL_COMPONENTS 
 	${APPS}
